kubernetes/novacorp/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: novacorp-ingress
  namespace: novacorp
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:716769866080:certificate/0b2aa289-3670-4b7f-9c09-2cedff3426c0
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/subnets: subnet-0825a62e88d6b82a1,subnet-0345151d64864791d
spec:
  ingressClassName: alb
  rules:
    - host: titotest.co.uk
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: novacorp-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: novacorp-frontend
                port:
                  number: 80
